Re-organized examples and tests

--- a/src/examples/ExampleMinimization/CMakeLists.txt
+++ b/src/examples/ExampleMinimization/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.0.2)
 project(TestCostFunction)
 
 include_directories("${PROJECT_SOURCE_DIR}/../../../../")
-add_definitions(-std=c++11)
+add_definitions(-std=c++11 -Wall -O3)
 
 add_executable(CustomCost main.cpp)
