Added example for using MLP

--- a/src/examples/ExampleFeedForwardBase/CMakeLists.txt
+++ b/src/examples/ExampleFeedForwardBase/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(ExampleFeedforwardNet)
 
-set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../)
-find_package(Eigen3 REQUIRED)
-
-include_directories("${EIGEN3_INCLUDE_DIR}")
+find_package(OpenCV REQUIRED)
 include_directories("${PROJECT_SOURCE_DIR}/../../../../")
-add_definitions(-std=c++11 -Wall)
+add_definitions(-std=c++11 -Wall -DNDEBUG -O3)
 
 add_executable(FeedForwardNet main.cpp)
+target_link_libraries(FeedForwardNet ${OpenCV_LIBS})
