Added dummy examples and quick-and-dirty tests

--- a/src/examples/ExampleRNN/CMakeLists.txt
+++ b/src/examples/ExampleRNN/CMakeLists.txt
@@ -5,3 +5,4 @@ include_directories("${PROJECT_SOURCE_DIR}/../../../../")
 add_definitions(-std=c++11 -Wall -O3)
 
 add_executable(ExampleRNN main.cpp)
+add_executable(RNNGradCheck mainHiddenGradCheck.cpp)
