--- a/src/examples/ExampleRNN/CMakeLists.txt
+++ b/src/examples/ExampleRNN/CMakeLists.txt
@@ -6,3 +6,4 @@ add_definitions(-std=c++11 -Wall -O3)
 
 add_executable(ExampleRNN main.cpp)
 add_executable(RNNGradCheck mainHiddenGradCheck.cpp)
+add_executable(RNNInputGradCheck mainInputGradCheck.cpp)
