Fixing one more permission error

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ addons:
 
 # install dependencies
 install:
-  - bash ./test/setup/install_dependencies.sh
+  - chmod +x ./test/setup/install_dependencies.sh
+  - ./test/setup/install_dependencies.sh
 
 before_script:
   - mkdir ./test/test_build
