--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - CCACHE_CPP2=1
     - COMPILER='ccache g++-4.9'
     - TMP_DIR='/tmp'
-    - INCLUDE_PATH='/usr/include'
+    - INCLUDE_PATH='~/test_dependencies/include'
 os: linux
 dist: trusty
 compiler: g++
