Added command to create dependencies include folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ addons:
       - cmake
 
 # install dependencies
+before_install:
+  - mkdir ${INCLUDE_PATH}
 install:
   - bash ./test/setup/install_dependencies.sh
 
