Fixed command to create dependencies include folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ addons:
 
 # install dependencies
 before_install:
-  - mkdir ${INCLUDE_PATH}
+  - mkdir -p ${INCLUDE_PATH}
 install:
   - bash ./test/setup/install_dependencies.sh
 
