--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_script:
   - mkdir ./test/test_build
   - cd ./test/test_build
   - export CXX="g++-4.9"
+  - ls -la ${INCLUDE_PATH}
   - cmake ..
 
 script:
