--- a/test/dummy_test_eigen/CMakeLists.txt
+++ b/test/dummy_test_eigen/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(TestEigenDummy)
 
+GET_DIRECTORY_PROPERTY(... INCLUDE_DIRECTORIES ... ) 
+
 add_executable(TestEigenDummy main.cpp)
