Cleaning travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,14 +24,16 @@ addons:
       - g++-4.9
       - cmake
 
+before_install:
+  - mkdir -p ${INCLUDE_PATH}
+install:
+  - bash ./test/setup/install_dependencies.sh
+
 # install dependencies
 before_script:
-  - mkdir -p ${INCLUDE_PATH}
-  - bash ./test/setup/install_dependencies.sh
   - mkdir ./test/test_build
   - cd ./test/test_build
   - export CXX="g++-4.9"
-  - ls -la ${INCLUDE_PATH}
   - cmake ..
 
 script:
