--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 if (COVERALLS)
 	include(Coveralls)
 	file(GLOB_RECURSE SRCS $ENV{TRAVIS_BUILD_DIR}/*.h)
+	string(REGEX REPLACE "$ENV{TEST_INCLUDE_PATH}/[^;]+;?" "" SRCS "${SRCS}")
+	string(REGEX REPLACE "$ENV{TEST_SRC_PATH}/[^;]+;?" "" SRCS "${SRCS}")
 	coveralls_turn_on_coverage()
 	coveralls_setup("${SRCS}" ${COVERALLS_UPLOAD})
 endif()
