--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 enable_testing()
 add_subdirectory(test_kernels)
 add_subdirectory(test_sampling)
+add_subdirectory(test_stochastic_process)
