Deleted make command from the script and added gaussian process demo in cmake file

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -14,3 +14,4 @@ include_directories(../${MLEARN_ROOT_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
 
 add_subdirectory(demo_sampling)
+add_subdirectory(demo_gaussian_process)
