Demo for GP regression

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -14,4 +14,5 @@ include_directories(../${MLEARN_ROOT_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
 
 add_subdirectory(demo_sampling)
+add_subdirectory(demo_regression)
 add_subdirectory(demo_gaussian_process)
