--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ before_script:
   - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug ..
 #build demos
   - cd $TRAVIS_BUILD_DIR/demos
-  - sudo bash ./setup.sh --all 
+  - bash ./setup.sh --all 
 
 script:
   - cd $TRAVIS_BUILD_DIR/test/test_build
