Updated Core and test files

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,3 +29,4 @@ add_subdirectory(test_kernels)
 add_subdirectory(test_sampling)
 add_subdirectory(test_regression)
 add_subdirectory(test_stochastic_process)
+add_subdirectory(test_neural_nets)
