Added demo for MNIST using FC net

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -16,3 +16,4 @@ link_directories(${Boost_LIBRARY_DIRS})
 add_subdirectory(demo_sampling)
 add_subdirectory(demo_regression)
 add_subdirectory(demo_gaussian_process)
+add_subdirectory(demo_mnist)
